# lib-image

./: CMakeLists.txt
include/: matrix.h  pixel_traits.h  vec2.h  vec3.h  vec4.h
include/impl/: matrix.hpp
src/: matrix.cpp
